# lazyssh

./: .cursorrules  .flake8  .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT_BOARD_SETUP.md  README.md  install.sh  pre-commit-check.sh  pyproject.toml  pyssh.py  requirements.txt  run_lazyssh.sh  setup.py  sshint.py  sshtun.py
.cursor/commands/: runchecks.md  updatechangelog.md
.github/: CODEOWNERS  PROJECT_AUTOMATION.md  PROJECT_MANAGEMENT.md  SECURITY.md  setup-project-board.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  epic.md  feature.md  feature_request.yml
.github/scripts/: create-milestones.py  update-labels-direct.py  update-labels.py
.github/workflows/: auto-assignment.yml  branch-protection.yml  label-sync.yml  milestone-automation.yml  project-board-automation.yml  project-management.yml  python-lint.yml  python-publish.yml  setup-milestones.yml  streamlined-project-management.yml  update-labels.yml
.zenflow/: settings.json
.zenflow/tasks/enumerate-enhancement-0fdd/: plan.md  requirements.md  spec.md
.zenflow/tasks/plugins-a1cc/: plan.md  requirements.md  spec.md
.zenflow/tasks/release-audit-19aa/: plan.md  requirements.md  spec.md
.zenflow/tasks/set-up-project-config-28f4/: plan.md
docs/: commands.md  development.md  getting-started.md  guides.md  logging_module.md  maintainers.md  project-management.md  publishing.md  reference.md  scp-mode.md  troubleshooting.md  tunneling.md  user-guide.md
docs/Plugin/: example_template.py  plugins.md
lazyssh/: __init__.py  __main__.py  command_mode.py  models.py  ssh.py  ui.py
openspec/: project.md
openspec/changes/add-connection-config-management/: design.md  proposal.md
openspec/changes/add-plugin-system/: proposal.md  tasks.md
openspec/changes/add-test-isolation-requirements/: tasks.md
openspec/changes/archive/2025-10-11-add-persistent-terminal-sessions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-11-add-windows-platform-support/: proposal.md  tasks.md
openspec/changes/archive/2025-10-11-fix-scp-no-args/: proposal.md  tasks.md
openspec/changes/archive/2025-10-11-fix-terminal-dependency/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-11-refactor-terminal-commands/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-11-remove-windows-support/: proposal.md  tasks.md
openspec/changes/archive/2025-10-12-add-config-backup-and-display/: proposal.md  tasks.md
openspec/changes/archive/2025-10-12-add-connection-config-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-implement-dracula-theme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-implement-ui-environment-variables/: proposal.md  tasks.md
openspec/changes/archive/2025-10-12-optimize-scp-command-execution/: IMPLEMENTATION_SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-refactor-documentation-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-remove-modes-add-wizard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-standardize-rich-library-usage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-12-update-github-issue-templates/: proposal.md  tasks.md
openspec/changes/archive/2025-10-13-add-plugin-exec-and-user-dirs/: proposal.md  tasks.md
openspec/changes/archive/2025-10-13-add-plugin-system/: SUMMARY.md  design.md  tasks.md
openspec/changes/archive/2025-10-13-add-tmp-plugins-dir/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-13-fix-plugin-validation-resilience/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-13-refactor-console-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-13-refactor-docs-simplify/: proposal.md  tasks.md
openspec/changes/archive/2025-10-13-update-python-and-deps/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-achieve-full-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-24-add-test-isolation-requirements/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-fix-list-command-display/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-modernize-hatch-mise/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-24-optimize-enumeration-plugin/: design.md  proposal.md
openspec/changes/archive/2026-01-24-remove-release-script/: proposal.md  tasks.md
openspec/changes/archive/2026-01-24-revise-comprehensive-documentation/: proposal.md  tasks.md
openspec/changes/fix-terminal-dependency/: proposal.md  tasks.md
openspec/changes/optimize-enumeration-plugin/: tasks.md
openspec/changes/refactor-terminal-commands/: proposal.md  tasks.md
openspec/changes/remove-modes-add-wizard/: design.md
openspec/specs/build-system/: spec.md
openspec/specs/connection-config/: spec.md
openspec/specs/platform-compatibility/: spec.md
openspec/specs/plugin-system/: spec.md
openspec/specs/scp-mode/: spec.md
openspec/specs/terminal-integration/: spec.md
openspec/specs/user-documentation/: spec.md
openspec/specs/user-interface/: spec.md
scripts/: release.py
src/lazyssh/: __init__.py  __main__.py  command_mode.py  config.py  console_instance.py  logging_module.py  models.py  plugin_manager.py  scp_mode.py  ssh.py  ui.py
src/lazyssh/plugins/: _arch_detection.py  _autopwn.py  _enumeration_plan.py  _gtfobins_data.py  _kernel_exploits.py  enumerate.py  example_template.py  upload_exec.py
tests/: conftest.py  test_autopwn.py  test_basic.py  test_command_mode.py  test_config.py  test_console_instance.py  test_enumerate_summary.py  test_gtfobins_data.py  test_kernel_exploits.py  test_logging_module.py  test_main.py  test_plain_text_mode.py  test_plugin_manager.py  test_refresh_rate_bounds.py  test_scp_mode.py  test_ssh.py  test_ui_env_vars.py  test_ui_theme_integration.py  test_upload_exec.py
(+45 files in other folders)
