[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyssh"
version = "1.5.0"
description = "A comprehensive SSH toolkit for managing connections and tunnels"
readme = "README.md"
authors = [
    {name = "Bochner", email = "lazyssh@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["ssh", "tunnel", "proxy", "socks", "terminal", "connection", "management"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "rich>=13.9.4",
    "click>=8.1.7",
    "pexpect>=4.9.0",
    "python-dotenv>=1.0.1",
    "prompt_toolkit>=3.0.48",
    "wcwidth>=0.2.13",
    "art>=6.3",
    "paramiko>=3.5.0",
    "tomli-w>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Bochner/lazyssh"
"Bug Tracker" = "https://github.com/Bochner/lazyssh/issues"
"Documentation" = "https://github.com/Bochner/lazyssh"
"Source Code" = "https://github.com/Bochner/lazyssh"

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pylint>=3.2.6",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "build>=1.2.2",
    "wheel>=0.44.0",
    "twine>=5.1.1",
]

[project.scripts]
lazyssh = "lazyssh.__main__:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]