[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyssh"
dynamic = ["version"]
description = "A comprehensive SSH toolkit for managing connections and tunnels"
readme = "README.md"
authors = [
    {name = "Bochner", email = "lazyssh@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["ssh", "tunnel", "proxy", "socks", "terminal", "connection", "management"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pexpect>=4.8.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.39,<3.1.0",
    "wcwidth>=0.2.5",
    "art>=5.9",
    "paramiko>=3.0.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Bochner/lazyssh"
"Bug Tracker" = "https://github.com/Bochner/lazyssh/issues"
Documentation = "https://github.com/Bochner/lazyssh"
"Source Code" = "https://github.com/Bochner/lazyssh"

[project.scripts]
lazyssh = "lazyssh.__main__:main"

# =============================================================================
# Hatch Configuration
# =============================================================================

[tool.hatch.version]
path = "src/lazyssh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyssh"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
]

# Single environment with all dev tools
[tool.hatch.envs.default]
description = "Development environment"
dependencies = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]

[tool.hatch.envs.default.scripts]
# Formatting
fmt = "ruff format src tests"
# Linting
lint = "ruff check src tests"
# Auto-fix and format
fix = [
    "ruff check --fix src tests",
    "ruff format src tests",
]
# Testing (with coverage by default)
test = "pytest tests"
# All quality checks
check = [
    "ruff format --check src tests",
    "ruff check src tests",
    "mypy src",
    "python -c 'import lazyssh; print(lazyssh.__version__)'",
]
# Build verification
verify-pkg = "twine check dist/*"

# =============================================================================
# Ruff Configuration (replaces black, isort, flake8, pylint, pyupgrade)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if statements (often more readable than combined)
    "SIM105", # contextlib.suppress (try/except/pass is clearer)
    "SIM108", # ternary operator (can reduce readability)
    "B904",   # raise from (not always appropriate)
]

[tool.ruff.lint.isort]
known-first-party = ["lazyssh"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-xvs --cov=src/lazyssh --cov-report=term-missing:skip-covered"

[tool.coverage.run]
source = ["src/lazyssh"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
